[gd_scene load_steps=7 format=3 uid="uid://ca40sxi6lp5lx"]

[ext_resource type="Texture2D" uid="uid://cqrp32axk6iw7" path="res://icons/left.png" id="1_5lkvv"]
[ext_resource type="Script" uid="uid://du38uicjumj26" path="res://touch_screen_controls.gd" id="1_ojv00"]
[ext_resource type="Texture2D" uid="uid://deq5sgrvhqnye" path="res://icons/right.png" id="2_4f7m8"]
[ext_resource type="Texture2D" uid="uid://bn4bsrph50pg0" path="res://icons/jump.png" id="3_jlthd"]
[ext_resource type="Texture2D" uid="uid://cbmxvmw0k41gi" path="res://icons/dash.png" id="4_8al0l"]
[ext_resource type="Texture2D" uid="uid://qlt2efe2hviy" path="res://icons/zoom.png" id="6_iqu8m"]

[node name="TouchScreenControls" type="CanvasLayer"]
script = ExtResource("1_ojv00")

[node name="BottomLeft" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
theme_override_constants/margin_left = 80
theme_override_constants/margin_bottom = 48

[node name="BottomLeftControlRow" type="HBoxContainer" parent="BottomLeft"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="LeftButtonControl" type="Control" parent="BottomLeft/BottomLeftControlRow"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="LeftButton" type="TouchScreenButton" parent="BottomLeft/BottomLeftControlRow/LeftButtonControl"]
modulate = Color(1, 1, 1, 0.294118)
texture_normal = ExtResource("1_5lkvv")
action = "left"
visibility_mode = 1

[node name="RightButtonControl" type="Control" parent="BottomLeft/BottomLeftControlRow"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="RightButton" type="TouchScreenButton" parent="BottomLeft/BottomLeftControlRow/RightButtonControl"]
modulate = Color(1, 1, 1, 0.294118)
texture_normal = ExtResource("2_4f7m8")
action = "right"
visibility_mode = 1

[node name="BottomRight" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 48

[node name="BottomRightControlRow" type="HBoxContainer" parent="BottomRight"]
custom_minimum_size = Vector2(0, 102)
layout_mode = 2
theme_override_constants/separation = 48
alignment = 2

[node name="JumpButtonControl" type="Control" parent="BottomRight/BottomRightControlRow"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="JumpButton" type="TouchScreenButton" parent="BottomRight/BottomRightControlRow/JumpButtonControl"]
modulate = Color(1, 1, 1, 0.294118)
texture_normal = ExtResource("3_jlthd")
action = "jump"
visibility_mode = 1

[node name="DashButtonControl" type="Control" parent="BottomRight/BottomRightControlRow"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="DashButton" type="TouchScreenButton" parent="BottomRight/BottomRightControlRow/DashButtonControl"]
modulate = Color(1, 1, 1, 0.294118)
texture_normal = ExtResource("4_8al0l")
action = "Dash"
visibility_mode = 1

[node name="TopLeft" type="MarginContainer" parent="."]
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 48

[node name="ZoomButtonControl" type="Control" parent="TopLeft"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ZoomButton" type="TouchScreenButton" parent="TopLeft/ZoomButtonControl"]
modulate = Color(1, 1, 1, 0.294118)
texture_normal = ExtResource("6_iqu8m")
action = "zoom"
visibility_mode = 1
